Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p>Want to contribute? Fork the repo and send us a pull request.</p>
 
-<h2>Copyright and license</h2>
+<h2>Copyright and License</h2>
 
 <p>Copyright 2012 JTL Systems</p>
 
