Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 
 <ol>
 <li>
-<p>Add JTLDB as a submodule of you project</p>
+<p>Add JTLDB as a submodule of your project</p>
 
 <pre><code>$ git submodule add git://github.com/jtlsystems/JTLDB.git  
 </code></pre>
 </li>
 <li><p>Add the JTLDB project to your XCode Workspace</p></li>
-</ol><h2>How to Use JTLDB to achieve data layer separation, data model versioning and easy entity creation from read statements</h2>
+</ol><h2>How to use JTLDB to achieve data layer separation, data model versioning and easy entity creation from read statements</h2>
 
-<p>Please checkout the <a href="">JTLDB Demo Project</a> <strong>COMING SOON</strong> for a good example of how to effectively use JTLDB.</p>
+<p>Please checkout the <a href="http://github.com/jtlsystems/JTLDBDemo">JTLDB Demo Project</a> for a good example of how to effectively use JTLDB.</p>
 
 <h2>Contributing</h2>
 
